--- a/package.json
+++ b/package.json
@@ -4,5 +4,16 @@
   },
   "scripts": {
     "test": "jest"
-  }
+  },
+  "name": "jest-testing",
+  "version": "1.0.0",
+  "main": "app.js",
+  "directories": {
+    "test": "tests"
+  },
+  "devDependencies": {},
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
